Fix text wrapping on long urls in ios theme
// FREEBIE

--- a/stylesheets/_themes.scss
+++ b/stylesheets/_themes.scss
@@ -100,6 +100,8 @@ $ios-border-color: rgba(0,0,0,0.1);
         display: inline-block;
         padding: 10px;
         position: relative;
+        word-break: break-word;
+
         &:before, &:after {
           content: '';
           display: block;
