--- a/stylesheets/manifest.css
+++ b/stylesheets/manifest.css
@@ -1423,7 +1423,8 @@ li.entry .error-icon-container {
   .ios .bubble .content .body {
     display: inline-block;
     padding: 10px;
-    position: relative; }
+    position: relative;
+    word-break: break-word; }
     .ios .bubble .content .body:before, .ios .bubble .content .body:after {
       content: '';
       display: block;
